welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:4: error: value | is not a member of Unit
	case "B" => avance()|avance();
                            ^BDR2:5: error: value | is not a member of Unit
	case "C" => avance()|avance()|avance();
                            ^BDR2:6: error: value | is not a member of Unit
	case "D" => avance()|avance()|avance()|avance();
                            ^BDR2:7: error: value | is not a member of Unit
	case "E" => avance()|avance()|avance()|avance()|avance();
                            ^BDR2:8: error: value | is not a member of Unit
	case "F" => avance()|avance()|avance()|avance()|avance()|avance();
                            ^BDR2:9: error: value | is not a member of Unit
	case "R" => droite()|avance();
                            ^BDR2:10: error: value | is not a member of Unit
	case "L" => gauche()|avance();
                            ^BDR2:11: error: value | is not a member of Unit
	case "Z" => recule()|
                            ^BDR2:12: error: value | is not a member of Unit
	case "Y" => recule()|recule();
                            ^BDR2:13: error: value | is not a member of Unit
	case "X" => recule()|recule()|recule();
                            ^